Rename and cleanup

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -68,28 +68,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-28 13:53:06,156 - INFO - Processed index: 10000\n",
-      "2017-09-28 13:53:11,791 - INFO - Processed index: 30000\n",
-      "2017-09-28 13:53:14,703 - INFO - Processed index: 40000\n",
-      "2017-09-28 13:53:17,643 - INFO - Processed index: 50000\n",
-      "2017-09-28 13:53:20,684 - INFO - Processed index: 60000\n",
-      "2017-09-28 13:53:26,653 - INFO - Processed index: 80000\n",
-      "2017-09-28 13:53:29,580 - INFO - Processed index: 90000\n",
-      "2017-09-28 13:53:32,610 - INFO - Processed index: 100000\n",
-      "2017-09-28 13:53:35,541 - INFO - Processed index: 110000\n",
-      "2017-09-28 13:53:38,594 - INFO - Processed index: 120000\n",
-      "2017-09-28 13:53:41,709 - INFO - Processed index: 130000\n",
-      "2017-09-28 13:53:44,834 - INFO - Processed index: 140000\n",
-      "2017-09-28 13:53:47,953 - INFO - Processed index: 150000\n",
-      "2017-09-28 13:53:54,145 - INFO - Processed index: 170000\n",
-      "2017-09-28 13:54:06,244 - INFO - Processed index: 210000\n",
-      "2017-09-28 13:54:09,855 - INFO - Processed index: 220000\n",
-      "2017-09-28 13:54:10,336 - INFO - Undersampling\n",
-      "2017-09-28 13:54:10,438 - INFO - Compute classes statistics ...\n",
-      "2017-09-28 13:54:10,440 - DEBUG - The number of classes is 2\n",
-      "2017-09-28 13:54:10,443 - DEBUG - Shall we raise a warning: False\n",
-      "2017-09-28 13:54:10,463 - INFO - 2 classes detected: Counter({0: 148299, 1: 16111})\n",
-      "2017-09-28 13:54:10,911 - INFO - Under-sampling performed: Counter({1: 16111, 0: 16111})\n"
+      "2017-09-28 16:14:30,370 - INFO - Processed index: 10000\n",
+      "2017-09-28 16:14:36,023 - INFO - Processed index: 30000\n",
+      "2017-09-28 16:14:38,928 - INFO - Processed index: 40000\n",
+      "2017-09-28 16:14:41,862 - INFO - Processed index: 50000\n",
+      "2017-09-28 16:14:44,916 - INFO - Processed index: 60000\n",
+      "2017-09-28 16:14:50,920 - INFO - Processed index: 80000\n",
+      "2017-09-28 16:14:53,836 - INFO - Processed index: 90000\n",
+      "2017-09-28 16:14:56,839 - INFO - Processed index: 100000\n",
+      "2017-09-28 16:14:59,765 - INFO - Processed index: 110000\n",
+      "2017-09-28 16:15:02,805 - INFO - Processed index: 120000\n",
+      "2017-09-28 16:15:05,925 - INFO - Processed index: 130000\n",
+      "2017-09-28 16:15:09,084 - INFO - Processed index: 140000\n",
+      "2017-09-28 16:15:12,216 - INFO - Processed index: 150000\n",
+      "2017-09-28 16:15:18,478 - INFO - Processed index: 170000\n",
+      "2017-09-28 16:15:30,787 - INFO - Processed index: 210000\n",
+      "2017-09-28 16:15:34,424 - INFO - Processed index: 220000\n",
+      "2017-09-28 16:15:34,908 - INFO - Undersampling\n",
+      "2017-09-28 16:15:35,011 - INFO - Compute classes statistics ...\n",
+      "2017-09-28 16:15:35,013 - DEBUG - The number of classes is 2\n",
+      "2017-09-28 16:15:35,015 - DEBUG - Shall we raise a warning: False\n",
+      "2017-09-28 16:15:35,035 - INFO - 2 classes detected: Counter({0: 148299, 1: 16111})\n",
+      "2017-09-28 16:15:35,744 - INFO - Under-sampling performed: Counter({1: 16111, 0: 16111})\n"
      ]
     }
    ],
@@ -207,8 +207,8 @@
       "Number of test samples is: 16112\n",
       "Number of training samples is: 16112\n",
       "Number of test samples is: 16110\n",
-      "2017-09-28 13:54:16,020 - INFO - Average roc_auc score of 2 folds is: 0.4997517224247154\n",
-      "2017-09-28 13:54:16,020 - INFO - Average elapsed prediction time over 2 folds in s is: 0.02140820026397705\n"
+      "2017-09-28 16:15:41,859 - INFO - Average roc_auc score of 2 folds is: 0.4997517224247154\n",
+      "2017-09-28 16:15:41,860 - INFO - Average elapsed prediction time over 2 folds in s is: 0.02162623405456543\n"
      ]
     }
    ],
@@ -264,15 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-28 13:54:28,595 - INFO - Average roc_auc score of 2 folds is: 0.6647324100631397\n",
-      "2017-09-28 13:54:28,596 - INFO - Average elapsed prediction time over 2 folds in s is: 0.05450034141540527\n"
+      "2017-09-28 16:16:04,165 - INFO - Average roc_auc score of 2 folds is: 0.6647324100631397\n",
+      "2017-09-28 16:16:07,042 - INFO - Average elapsed prediction time over 2 folds in s is: 3.502115488052368\n"
      ]
     }
    ],
@@ -312,48 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Does an MLP classifier help?\n",
-    "\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
-    "\n",
-    "roc_auc_avg = 0\n",
-    "avg_predict_time = 0\n",
-    "\n",
-    "for train_index, test_index in skf.split(X,y) :\n",
-    "\n",
-    "    \n",
-    "    X_train = X[train_index]\n",
-    "    X_test = X[test_index]\n",
-    "    y_train = y[train_index]\n",
-    "    y_test = y[test_index]\n",
-    "\n",
-    "    classifier = MLPClassifier(random_state=global_random_state)\n",
-    "    classifier.fit(X_train,y_train)\n",
-    "    start = time.time()\n",
-    "    y_pred = classifier.predict(X_test)\n",
-    "    elapsed = time.time() - start\n",
-    "    avg_predict_time = avg_predict_time + elapsed\n",
-    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    #logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    #logger.info(classification_report(y_test, y_pred))\n",
-    "    roc_auc_avg = roc_auc_avg + auc\n",
-    "    \n",
-    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
-    "logger.info(\"Average elapsed prediction time over {} folds in s is: {}\".format(k_fold_splits, avg_predict_time))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-09-28 16:17:51,513 - INFO - Average roc_auc score is: 0.7425673798309413\n",
+      "2017-09-28 16:17:51,625 - INFO - Average elapsed prediction time over 2 folds in s is: 4.380889177322388\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try using a Random forest\n",
     "\n",
@@ -388,11 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-09-28 16:17:58,592 - INFO - Average roc_auc score is: 0.697101308068844\n",
+      "2017-09-28 16:17:58,593 - INFO - Average elapsed prediction time over 2 folds in s is: 0.23391437530517578\n"
+     ]
+    }
+   ],
    "source": [
-    "# Let's try using a Random forest\n",
+    "# Let's try using a Logistic Regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
@@ -424,40 +403,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RandomizedSearchCV' object has no attribute '_best_score'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c0f2d03f001f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mrandomized_search\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomizedSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparam_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"roc_auc\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mglobal_random_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Best found score of: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_best_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Best found model: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_best_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'RandomizedSearchCV' object has no attribute '_best_score'"
+     ]
+    }
+   ],
    "source": [
-    "# Let's take a look at the found model\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler(copy=True, feature_range=(-1.0, 1.0))\n",
-    "\n",
-    "X = scaler.fit_transform(X)\n",
-    "\n",
-    "for train_index, test_index in skf.split(X,y) :\n",
-    "\n",
-    "    \n",
-    "    X_train = X[train_index]\n",
-    "    X_test = X[test_index]\n",
-    "    y_train = y[train_index]\n",
-    "    y_test = y[test_index]\n",
-    "\n",
-    "    classifier = RandomForestClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
-    "            max_depth=None, max_features='log2', max_leaf_nodes=None,\n",
-    "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
-    "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-    "            n_estimators=72, n_jobs=1, oob_score=False, random_state=3,\n",
-    "            verbose=False, warm_start=False)    \n",
-    "    classifier.fit(X_train,y_train)\n",
-    "    y_pred = classifier.predict(X_test)\n",
-    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    #logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    #logger.info(classification_report(y_test, y_pred))\n",
-    "    roc_auc_avg = roc_auc_avg + auc\n",
-    "    \n",
-    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n"
+    "estimator = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
+    "param_dist = {\"n_estimators\": [10, 100, 1000],\n",
+    "              \"min_samples_split\": [1,5, 20, 50],\n",
+    "              \"min_samples_leaf\": [1,5, 20, 50],\n",
+    "              \"bootstrap\": [True, False],\n",
+    "              \"criterion\": [\"gini\", \"entropy\"]}\n",
+    "randomized_search = RandomizedSearchCV(estimator,param_dist, scoring=\"roc_auc\",n_jobs=-1, random_state=global_random_state)\n",
+    "randomized_search.fit(X,y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best found score of: 0.7287595195687173\n",
+      "Best found model: RandomForestClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
+      "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+      "            min_impurity_split=1e-07, min_samples_leaf=5,\n",
+      "            min_samples_split=5, min_weight_fraction_leaf=0.0,\n",
+      "            n_estimators=1000, n_jobs=-1, oob_score=False, random_state=42,\n",
+      "            verbose=0, warm_start=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Best found score of: {}\".format(randomized_search.best_score_))\n",
+    "print(\"Best found model: {}\".format(randomized_search.best_estimator_))"
    ]
   },
   {
@@ -467,7 +462,20 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let's look at the predictions that the best-performing model makes on the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Let's try to improve the Random Forest via hyperparameter search"
+   ]
   }
  ],
  "metadata": {
