--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-28 16:17:51,513 - INFO - Average roc_auc score is: 0.7425673798309413\n",
-      "2017-09-28 16:17:51,625 - INFO - Average elapsed prediction time over 2 folds in s is: 4.380889177322388\n"
+      "2017-09-28 22:22:08,953 - INFO - Average roc_auc score is: 0.7425673798309413\n",
+      "2017-09-28 22:22:09,045 - INFO - Average elapsed prediction time over 2 folds in s is: 0.4917590618133545\n"
      ]
     }
    ],
@@ -340,15 +340,13 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
-    "    classifier.fit(X_train,y_train)\n",
+    "    rf_classifier = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
+    "    rf_classifier.fit(X_train,y_train)\n",
     "    start = time.time()\n",
-    "    y_pred = classifier.predict(X_test)\n",
+    "    y_pred = rf_classifier.predict(X_test)\n",
     "    elapsed = time.time() - start\n",
     "    avg_predict_time = avg_predict_time + elapsed\n",
     "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    #logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    #logger.info(classification_report(y_test, y_pred))\n",
     "    roc_auc_avg = roc_auc_avg + auc\n",
     "    \n",
     "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
@@ -358,15 +356,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-09-28 16:17:58,592 - INFO - Average roc_auc score is: 0.697101308068844\n",
-      "2017-09-28 16:17:58,593 - INFO - Average elapsed prediction time over 2 folds in s is: 0.23391437530517578\n"
+      "2017-09-28 22:22:13,761 - INFO - Average roc_auc score is: 0.697101308068844\n",
+      "2017-09-28 22:22:13,761 - INFO - Average elapsed prediction time over 2 folds in s is: 0.13528966903686523\n"
      ]
     }
    ],
@@ -403,56 +401,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'RandomizedSearchCV' object has no attribute '_best_score'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-c0f2d03f001f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mrandomized_search\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomizedSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparam_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"roc_auc\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mglobal_random_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Best found score of: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_best_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Best found model: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandomized_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_best_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'RandomizedSearchCV' object has no attribute '_best_score'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>generic_name</th>\n",
+       "      <th>cns_drug</th>\n",
+       "      <th>smiles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abacavir</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NC1=NC2=C(N=CN2[C@@H]2C[C@H](CO)C=C2)C(NC2CC2)=N1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Abarelix</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Abatacept</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abciximab</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abiraterone</td>\n",
+       "      <td>False</td>\n",
+       "      <td>CC(=O)O[C@H]1CC[C@]2(C)C3CC[C@@]4(C)C(CC=C4C4=...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  generic_name  cns_drug                                             smiles\n",
+       "0     Abacavir     False  NC1=NC2=C(N=CN2[C@@H]2C[C@H](CO)C=C2)C(NC2CC2)=N1\n",
+       "1     Abarelix     False                                                NaN\n",
+       "2    Abatacept     False                                                NaN\n",
+       "3    Abciximab     False                                                NaN\n",
+       "4  Abiraterone     False  CC(=O)O[C@H]1CC[C@]2(C)C3CC[C@@]4(C)C(CC=C4C4=..."
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "# Let's look at the predictions that the best-performing model makes on a dataset of available medicines\n",
+    "medicines = pd.read_csv(\"approved_drugs.txt\",sep='\\t',header=0)\n",
+    "medicines.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>generic_name</th>\n",
+       "      <th>cns_drug</th>\n",
+       "      <th>smiles</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abacavir</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NC1=NC2=C(N=CN2[C@@H]2C[C@H](CO)C=C2)C(NC2CC2)=N1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Abiraterone</td>\n",
+       "      <td>False</td>\n",
+       "      <td>CC(=O)O[C@H]1CC[C@]2(C)C3CC[C@@]4(C)C(CC=C4C4=...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Acamprosate</td>\n",
+       "      <td>True</td>\n",
+       "      <td>CC(=O)NCCCS(O)(=O)=O</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Acarbose</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C[C@H]1O[C@H](O[C@@H]2[C@@H](CO)O[C@H](O[C@@H]...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Acebutolol</td>\n",
+       "      <td>False</td>\n",
+       "      <td>CCCC(=O)NC1=CC(C(C)=O)=C(OCC(O)CNC(C)C)C=C1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  generic_name  cns_drug                                             smiles  \\\n",
+       "0     Abacavir     False  NC1=NC2=C(N=CN2[C@@H]2C[C@H](CO)C=C2)C(NC2CC2)=N1   \n",
+       "4  Abiraterone     False  CC(=O)O[C@H]1CC[C@]2(C)C3CC[C@@]4(C)C(CC=C4C4=...   \n",
+       "5  Acamprosate      True                               CC(=O)NCCCS(O)(=O)=O   \n",
+       "6     Acarbose     False  C[C@H]1O[C@H](O[C@@H]2[C@@H](CO)O[C@H](O[C@@H]...   \n",
+       "7   Acebutolol     False        CCCC(=O)NC1=CC(C(C)=O)=C(OCC(O)CNC(C)C)C=C1   \n",
+       "\n",
+       "  prediction  \n",
+       "0      False  \n",
+       "4      False  \n",
+       "5       True  \n",
+       "6      False  \n",
+       "7      False  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now, let's compute SMILES strings for each medicine, and look at some predictions\n",
+    "names = list()\n",
+    "smiles_list = list()\n",
+    "fingerprints = list()\n",
     "\n",
-    "estimator = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
-    "param_dist = {\"n_estimators\": [10, 100, 1000],\n",
-    "              \"min_samples_split\": [1,5, 20, 50],\n",
-    "              \"min_samples_leaf\": [1,5, 20, 50],\n",
-    "              \"bootstrap\": [True, False],\n",
-    "              \"criterion\": [\"gini\", \"entropy\"]}\n",
-    "randomized_search = RandomizedSearchCV(estimator,param_dist, scoring=\"roc_auc\",n_jobs=-1, random_state=global_random_state)\n",
-    "randomized_search.fit(X,y)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best found score of: 0.7287595195687173\n",
-      "Best found model: RandomForestClassifier(bootstrap=False, class_weight=None, criterion='gini',\n",
-      "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-      "            min_impurity_split=1e-07, min_samples_leaf=5,\n",
-      "            min_samples_split=5, min_weight_fraction_leaf=0.0,\n",
-      "            n_estimators=1000, n_jobs=-1, oob_score=False, random_state=42,\n",
-      "            verbose=0, warm_start=False)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Best found score of: {}\".format(randomized_search.best_score_))\n",
-    "print(\"Best found model: {}\".format(randomized_search.best_estimator_))"
+    "medicines_processed = medicines.dropna()\n",
+    "\n",
+    "for index, row in medicines_processed.iterrows() :\n",
+    "    name = row[\"generic_name\"]\n",
+    "    smiles_string = row[\"smiles\"]\n",
+    "    mol = Chem.MolFromSmiles(smiles_string)\n",
+    "    if mol is None:\n",
+    "        logger.info(\"Molecule failed featurization\")\n",
+    "        logger.info(index)\n",
+    "    else: \n",
+    "        fingerprint = rdMolDescriptors.GetMorganFingerprintAsBitVect(mol,2,nBits=2048,useChirality=False,\n",
+    "                                                                     useBondTypes=False,useFeatures=False)\n",
+    "        \n",
+    "        # From RDKit documentation\n",
+    "        arr = np.zeros((1,))\n",
+    "        DataStructs.ConvertToNumpyArray(fingerprint, arr)\n",
+    "        fingerprint = arr\n",
+    "        \n",
+    "        compound_ids.append(cid)\n",
+    "        smiles_list.append(smiles_string)\n",
+    "        fingerprints.append(fingerprint)\n",
+    "\n",
+    "# Now let's run them through the RandomForestClassifier trained on last fold\n",
+    "predictions = rf_classifier.predict(fingerprints)\n",
+    "medicines_processed[\"prediction\"] = pd.Series(predictions,dtype=bool)\n",
+    "medicines_processed.head()"
    ]
   },
   {
@@ -463,18 +620,7 @@
    },
    "outputs": [],
    "source": [
-    "# Let's look at the predictions that the best-performing model makes on the "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Let's try to improve the Random Forest via hyperparameter search"
+    "# Conclusion - someone with abnormal ALHD1A1 activity may want to ask their doctor about Acamprosate"
    ]
   }
  ],
